tests/semantic/fail/var-5.tiger
let
	var a : b := b {}
in
end
